fix search results search form wrapping

--- a/www/less/pages/search-results.less
+++ b/www/less/pages/search-results.less
@@ -12,7 +12,8 @@
 				@media (max-width: @screen-sm) {
 					margin-left: 0;
 				}
-				.form-control {
+				.form-control, .twitter-typeahead {
+					display: block !important;
 					width: 430px;
 					@media (max-width: @screen-sm) {
 						width: 100%;
